# pico-cart-snes

./: .gitignore  LICENSE  README.md
fw/: .gitignore  CMakeLists.txt  cart.c  cart.h  logic_analyzer.c  logic_analyzer.h  main.c  psram.c  psram.h  psram.pio
fw/proto/: psram.pio  snesaddr.pio
v0/: v0.kicad_pcb  v0.kicad_prl  v0.kicad_pro  v0.kicad_sch
v0/gerbers/: v0-B_Cu.gbl  v0-B_Mask.gbs  v0-B_Paste.gbp  v0-B_Silkscreen.gbo  v0-Edge_Cuts.gm1  v0-F_Cu.gtl  v0-F_Mask.gts  v0-F_Paste.gtp  v0-F_Silkscreen.gto  v0-NPTH-drl_map.gbr  v0-NPTH.drl  v0-PTH-drl_map.gbr  v0-PTH.drl
v1/: RPi_Pico.kicad_sym  fp-lib-table  sym-lib-table  v1.kicad_pcb  v1.kicad_prl  v1.kicad_pro  v1.kicad_sch
v1/RPi_Pico.pretty/: RPi_Pico_2x20.kicad_mod
v1/SNES.pretty/: SNESCART_EXT2.kicad_mod
v1/gerbers/: v1-B_Cu.gbl  v1-B_Mask.gbs  v1-B_Paste.gbp  v1-B_Silkscreen.gbo  v1-Edge_Cuts.gm1  v1-F_Cu.gtl  v1-F_Mask.gts  v1-F_Paste.gtp  v1-F_Silkscreen.gto  v1-NPTH-drl_map.gbr  v1-NPTH.drl  v1-PTH-drl_map.gbr  v1-PTH.drl
